apps/kube-resources/rebtel-web-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rebtel-web-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebtel-web-deployment
  namespace: rebtel-web-app
  labels:
    app: rebtel-web
    environment: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rebtel-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: rebtel-web
        tier: frontend
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: rebtel-web-container
          image: 552601825397.dkr.ecr.eu-central-1.amazonaws.com/rebtel-web-image:latest
          ports:
            - containerPort: 8888
          securityContext:
            runAsUser: 1001
            runAsGroup: 3000
          resources:
            limits:
              cpu: "0.2"
              memory: "256Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
      volumes:
        - name: nginx-cache
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: rebtel-web-service
  namespace: rebtel-web-app
  labels:
    app: rebtel-web
spec:
  selector:
    app: rebtel-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
